k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lookatme-d
  namespace: cloudnative-pg
  labels:
    app: lookatme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lookatme
  template:
    metadata:
      labels:
        app: lookatme
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: lookatme
          image: nheek/lookatme:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "30Mi"
