k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lookatme-service
  namespace: cloudnative-pg
  labels:
    app: lookatme
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3001
  selector:
    app: lookatme
