k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lookatme-ingress
  namespace: cloudnative-pg
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: lookatme.nheek.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lookatme-service
                port:
                  number: 80
    - host: lookatme.nheek.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lookatme-service
                port:
                  number: 80
